updated jar path

--- a/EddieBot/Procfile
+++ b/EddieBot/Procfile
@@ -1,1 +1,1 @@
-worker: java -Dserver.port=$PORT $JAVA_OPTS -jar target/EddieBot-1.0-jar-with-dependencies.jar
+worker: java -Dserver.port=$PORT $JAVA_OPTS -jar EddieBot/target/EddieBot-1.0-jar-with-dependencies.jar
