--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Constants.java
-EddieBot/target/classes/main/java/Constants.class
+target/classes/main/java/Constants.class
+src/main/java/Constants.java
