--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 
 
     <build>
-        <sourceDirectory>src/main/java</sourceDirectory>
+        <sourceDirectory>src/eddie</sourceDirectory>
         <resources>
             <resource>
                 <targetPath>.</targetPath>
@@ -87,7 +87,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>main.java.main</mainClass> <!-- You have to replace this with a path to your main class like my.path.Main -->
+                            <mainClass>eddie.main</mainClass> <!-- You have to replace this with a path to your main class like my.path.Main -->
                         </manifest>
                     </archive>
                     <descriptorRefs>
