--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id'java'
     id'application'
-    id'com.github.johnrengelman.shadow' version '2.0.1'
+    id'com.github.johnrengelman.shadow' version '2.0.4'
+    id'idea'
 }
 
-mainClassName = 'main.java'
+mainClassName = 'eddie.main'
 
 version '1.0'
 
@@ -17,7 +18,10 @@ repositories {
 dependencies {
     compile 'net.dv8tion:JDA:3.8.1_439'
     compile 'com.sedmelluq:lavaplayer:1.3.10'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    compile 'com.google.code.gson:gson:2.8.5'
+    compile group: 'org.slf4j', name:'slf4j-api', version: '1.7.2'
+    compile group: 'ch.qos.logback', name:'logback-classic', version: '1.0.9'
+    compile group: 'ch.qos.logback', name:'logback-core', version: '1.0.9'
 }
 
 sourceSets {
