--- a/build.gradle
+++ b/build.gradle
@@ -5,29 +5,33 @@ plugins {
     id'idea'
 }
 
-mainClassName = 'eddie.EddieBot'
+mainClassName = 'com.nate.eddiebot.EddieBot'
 
 version '1.0'
 
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_1_8
 
 task stage(dependsOn: ['installDist'])
 
 repositories {
     jcenter()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
-    compile 'net.dv8tion:JDA:3.8.1_439'
+    compile 'net.dv8tion:JDA:3.8.1_445'
     compile 'com.jagrosh:jda-utilities:2.1.4'
     compile 'com.sedmelluq:lavaplayer:1.3.10'
     compile 'com.google.code.gson:gson:2.8.5'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+
+    implementation group: 'com.github.duncte123', name: 'botCommons', version: 'fbb8f98'
 }
 
 sourceSets {
     main {
         java {
-            srcDirs = ['src']
+            srcDirs = ['src/main/java']
         }
     }
 }
