--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,7 @@ sourceSets {
 }
 
 compileJava.options.encoding = 'UTF-8'
+
+jar {
+    manifest.attributes "Main-Class": "com.nate.eddiebot.EddieBot"
+}
