--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "eddit_bot"
+name = "eddie_bot"
 version = "0.1.0"
 authors = ["Nate Sedler <nsedler1@gmail.com>"]
 edition = "2018"
@@ -11,3 +11,4 @@ serenity = "0.8"
 chrono = "0.4"
 dotenv = "0.15"
 regex = "1"
+lazy_static = "1.4.0"
